# web-snatcher

./: README.md  pyproject.toml
web_snatcher/: main.py
