[tool.poetry]
name = "web-snatcher"
version = "0.1.0"
description = ""
authors = ["plutopulp <plutopulped@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.13.1"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
